Update GitHub repo location

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
       <br />
       The colors were inspired by <a href='https://www.python.org/'>python.org</a>, and the font is <a href='https://github.com/tonsky/FiraCode'>Fira Code</a>.
       <br />
-      <a href='https://github.com/pep20/pep20.github.io'>Contributions welcome!</a> &hearts;
+      <a href='https://github.com/nkantar/pep20.org'>Contributions welcome!</a> &hearts;
     </p>
 
   </body>
