--- a/index.html
+++ b/index.html
@@ -36,25 +36,25 @@
     <hr />
 
     <ul>
-      <li>Beautiful is better than ugly.</li>
-      <li>Explicit is better than implicit.</li>
-      <li>Simple is better than complex.</li>
-      <li>Complex is better than complicated.</li>
-      <li>Flat is better than nested.</li>
-      <li>Sparse is better than dense.</li>
-      <li>Readability counts.</li>
-      <li>Special cases aren&rsquo;t special enough to break the rules.</li>
-      <li>Although practicality beats purity.</li>
-      <li>Errors should never pass silently.</li>
-      <li>Unless explicitly silenced.</li>
-      <li>In the face of ambiguity, refuse the temptation to guess.</li>
-      <li>There should be one&mdash;and preferably only one&mdash;obvious way to do it.</li>
-      <li>Although that way may not be obvious at first unless you&rsquo;re Dutch.</li>
-      <li>Now is better than never.</li>
-      <li>Although never is often better than <em>right</em> now.</li>
-      <li>If the implementation is hard to explain, it&rsquo;s a bad idea.</li>
-      <li>If the implementation is easy to explain, it may be a good idea.</li>
-      <li>Namespaces are one honking great idea&mdash;let&rsquo;s do more of those!</li>
+      <li id="beautiful">Beautiful is better than ugly.</li>
+      <li id="explicit">Explicit is better than implicit.</li>
+      <li id="simple">Simple is better than complex.</li>
+      <li id="complex">Complex is better than complicated.</li>
+      <li id="flat">Flat is better than nested.</li>
+      <li id="sparse">Sparse is better than dense.</li>
+      <li id="readability">Readability counts.</li>
+      <li id="special">Special cases aren&rsquo;t special enough to break the rules.</li>
+      <li id="practicality">Although practicality beats purity.</li>
+      <li id="errors">Errors should never pass silently.</li>
+      <li id="silenced">Unless explicitly silenced.</li>
+      <li id="ambiguity">In the face of ambiguity, refuse the temptation to guess.</li>
+      <li id="obvious">There should be one&mdash;and preferably only one&mdash;obvious way to do it.</li>
+      <li id="dutch">Although that way may not be obvious at first unless you&rsquo;re Dutch.</li>
+      <li id="now">Now is better than never.</li>
+      <li id="never">Although never is often better than <em>right</em> now.</li>
+      <li id="hard">If the implementation is hard to explain, it&rsquo;s a bad idea.</li>
+      <li id="easy">If the implementation is easy to explain, it may be a good idea.</li>
+      <li id="namespaces">Namespaces are one honking great idea&mdash;let&rsquo;s do more of those!</li>
     </ul>
 
     <hr />
