Prettier-ify index.html

--- a/index.html
+++ b/index.html
@@ -1,36 +1,36 @@
 <!DOCTYPE html>
-<html lang='en'>
+<html lang="en">
   <head>
-
     <!-- voodoo -->
-    <meta charset='utf-8'>
-    <meta name='viewport' content='width=device-width'>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width" />
 
     <!-- basic meta -->
     <title>PEP 20 ~ The Zen of Python</title>
-    <meta name='description' content='PEP 20 ~ The Zen of Python' />
+    <meta name="description" content="PEP 20 ~ The Zen of Python" />
 
     <!-- OG -->
-    <meta property='og:title' content='PEP 20 ~ The Zen of Python'>
-    <meta property='og:url' content='http://pep20.org/'>
-    <meta property='og:description' content='pep20.org is a stylized presentation of The Zen of Python. The Zen of Python is a collection of 20 software principles (of which only 19 were written down) that influences the design of the Python Programming Language. It was written around June 1999 by Tim Peters.'>
-    <meta property='og:image' content='/assets/images/pep20favicon144.gif'>
-    <meta property='og:image:width' content='144'>
-    <meta property='og:image:height' content='144'>
+    <meta property="og:title" content="PEP 20 ~ The Zen of Python" />
+    <meta property="og:url" content="http://pep20.org/" />
+    <meta
+      property="og:description"
+      content="pep20.org is a stylized presentation of The Zen of Python. The Zen of Python is a collection of 20 software principles (of which only 19 were written down) that influences the design of the Python Programming Language. It was written around June 1999 by Tim Peters."
+    />
+    <meta property="og:image" content="/assets/images/pep20favicon144.gif" />
+    <meta property="og:image:width" content="144" />
+    <meta property="og:image:height" content="144" />
 
     <!-- icons -->
-    <link rel='shortcut icon' href='/assets/images/pep20favicon64.gif' />
-    <link rel='apple-touch-icon' href='/assets/images/pep20favicon144.gif' />
+    <link rel="shortcut icon" href="/assets/images/pep20favicon64.gif" />
+    <link rel="apple-touch-icon" href="/assets/images/pep20favicon144.gif" />
 
     <!-- stylesheets -->
-    <link rel='stylesheet' type='text/css' href='/assets/css/typeplate.css'>
-    <link rel='stylesheet' type='text/css' href='/assets/css/fonts.css'>
-    <link rel='stylesheet' type='text/css' href='/assets/css/style.css'>
-
+    <link rel="stylesheet" type="text/css" href="/assets/css/typeplate.css" />
+    <link rel="stylesheet" type="text/css" href="/assets/css/fonts.css" />
+    <link rel="stylesheet" type="text/css" href="/assets/css/style.css" />
   </head>
   <body>
-
-    <h1><a href='/'>PEP 20</a></h1>
+    <h1><a href="/">PEP 20</a></h1>
     <h4>The Zen of Python</h4>
 
     <hr />
@@ -43,33 +43,57 @@
       <li id="flat">Flat is better than nested.</li>
       <li id="sparse">Sparse is better than dense.</li>
       <li id="readability">Readability counts.</li>
-      <li id="special">Special cases aren&rsquo;t special enough to break the rules.</li>
+      <li id="special">
+        Special cases aren&rsquo;t special enough to break the rules.
+      </li>
       <li id="practicality">Although practicality beats purity.</li>
       <li id="errors">Errors should never pass silently.</li>
       <li id="silenced">Unless explicitly silenced.</li>
-      <li id="ambiguity">In the face of ambiguity, refuse the temptation to guess.</li>
-      <li id="obvious">There should be one&mdash;and preferably only one&mdash;obvious way to do it.</li>
-      <li id="dutch">Although that way may not be obvious at first unless you&rsquo;re Dutch.</li>
+      <li id="ambiguity">
+        In the face of ambiguity, refuse the temptation to guess.
+      </li>
+      <li id="obvious">
+        There should be one&mdash;and preferably only one&mdash;obvious way to
+        do it.
+      </li>
+      <li id="dutch">
+        Although that way may not be obvious at first unless you&rsquo;re Dutch.
+      </li>
       <li id="now">Now is better than never.</li>
-      <li id="never">Although never is often better than <em>right</em> now.</li>
-      <li id="hard">If the implementation is hard to explain, it&rsquo;s a bad idea.</li>
-      <li id="easy">If the implementation is easy to explain, it may be a good idea.</li>
-      <li id="namespaces">Namespaces are one honking great idea&mdash;let&rsquo;s do more of those!</li>
+      <li id="never">
+        Although never is often better than <em>right</em> now.
+      </li>
+      <li id="hard">
+        If the implementation is hard to explain, it&rsquo;s a bad idea.
+      </li>
+      <li id="easy">
+        If the implementation is easy to explain, it may be a good idea.
+      </li>
+      <li id="namespaces">
+        Namespaces are one honking great idea&mdash;let&rsquo;s do more of
+        those!
+      </li>
     </ul>
 
     <hr />
 
     <p>
-      <a href='/'>pep20.org</a> was created by <a href='http://nkantar.com'>Nik Kantar</a>.
+      <a href="/">pep20.org</a> was created by
+      <a href="http://nkantar.com">Nik Kantar</a>.
       <br />
-      <a href='https://www.python.org/dev/peps/pep-0020/'>PEP 20</a> was written by Tim Peters.
+      <a href="https://www.python.org/dev/peps/pep-0020/">PEP 20</a> was written
+      by Tim Peters.
       <br />
-      This site was heavily inspired by <a href='https://www.kennethreitz.org'>Kenneth Reitz</a>&rsquo;s <a href='http://pep8.org'>pep8.org</a>.
+      This site was heavily inspired by
+      <a href="https://www.kennethreitz.org">Kenneth Reitz</a>&rsquo;s
+      <a href="http://pep8.org">pep8.org</a>.
       <br />
-      The colors were inspired by <a href='https://www.python.org/'>python.org</a>, and the font is <a href='https://github.com/tonsky/FiraCode'>Fira Code</a>.
+      The colors were inspired by
+      <a href="https://www.python.org/">python.org</a>, and the font is
+      <a href="https://github.com/tonsky/FiraCode">Fira Code</a>.
       <br />
-      <a href='https://github.com/nkantar/pep20.org'>Contributions welcome!</a> &hearts;
+      <a href="https://github.com/nkantar/pep20.org">Contributions welcome!</a>
+      &hearts;
     </p>
-
   </body>
 </html>
