Add list item anchors

--- a/index.html
+++ b/index.html
@@ -36,42 +36,61 @@
     <hr />
 
     <ul>
-      <li id="beautiful">Beautiful is better than ugly.</li>
-      <li id="explicit">Explicit is better than implicit.</li>
-      <li id="simple">Simple is better than complex.</li>
-      <li id="complex">Complex is better than complicated.</li>
-      <li id="flat">Flat is better than nested.</li>
-      <li id="sparse">Sparse is better than dense.</li>
-      <li id="readability">Readability counts.</li>
-      <li id="special">
-        Special cases aren&rsquo;t special enough to break the rules.
+      <li id="beautiful">
+        <a href="#beautiful">Beautiful</a> is better than ugly.
       </li>
-      <li id="practicality">Although practicality beats purity.</li>
-      <li id="errors">Errors should never pass silently.</li>
-      <li id="silenced">Unless explicitly silenced.</li>
+      <li id="explicit">
+        <a href="#explicit">Explicit</a> is better than implicit.
+      </li>
+      <li id="simple"><a href="#simple">Simple</a> is better than complex.</li>
+      <li id="complex">
+        <a href="#complex">Complex</a> is better than complicated.
+      </li>
+      <li id="flat"><a href="#flat">Flat</a> is better than nested.</li>
+      <li id="sparse"><a href="#sparse">Sparse</a> is better than dense.</li>
+      <li id="readability"><a href="#readability">Readability</a> counts.</li>
+      <li id="special">
+        <a href="#special">Special</a> cases aren&rsquo;t special enough to
+        break the rules.
+      </li>
+      <li id="practicality">
+        Although <a href="#practicality">practicality</a> beats purity.
+      </li>
+      <li id="errors">
+        <a href="#errors">Errors</a> should never pass silently.
+      </li>
+      <li id="silenced">Unless explicitly <a href="#silenced">silenced</a>.</li>
       <li id="ambiguity">
-        In the face of ambiguity, refuse the temptation to guess.
+        In the face of <a href="#ambiguity">ambiguity</a>, refuse the temptation
+        to guess.
       </li>
       <li id="obvious">
-        There should be one&mdash;and preferably only one&mdash;obvious way to
-        do it.
+        There should be one&mdash;and preferably only one&mdash;<a
+          href="#obvious"
+          >obvious</a
+        >
+        way to do it.
       </li>
       <li id="dutch">
-        Although that way may not be obvious at first unless you&rsquo;re Dutch.
+        Although that way may not be obvious at first unless you&rsquo;re
+        <a href="#dutch">Dutch</a>.
       </li>
-      <li id="now">Now is better than never.</li>
+      <li id="now"><a href="#now">Now</a> is better than never.</li>
       <li id="never">
-        Although never is often better than <em>right</em> now.
+        Although <a href="#never">never</a> is often better than
+        <em>right</em> now.
       </li>
       <li id="hard">
-        If the implementation is hard to explain, it&rsquo;s a bad idea.
+        If the implementation is <a href="#hard">hard</a> to explain, it&rsquo;s
+        a bad idea.
       </li>
       <li id="easy">
-        If the implementation is easy to explain, it may be a good idea.
+        If the implementation is <a href="#easy">easy</a> to explain, it may be
+        a good idea.
       </li>
       <li id="namespaces">
-        Namespaces are one honking great idea&mdash;let&rsquo;s do more of
-        those!
+        <a href="#namespaces">Namespaces</a> are one honking great
+        idea&mdash;let&rsquo;s do more ofhose!
       </li>
     </ul>
 
