Change HTML entities into characters in source

--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
       <li id="sparse"><a href="#sparse">Sparse</a> is better than dense.</li>
       <li id="readability"><a href="#readability">Readability</a> counts.</li>
       <li id="special">
-        <a href="#special">Special</a> cases aren&rsquo;t special enough to
-        break the rules.
+        <a href="#special">Special</a> cases aren’t special enough to break the
+        rules.
       </li>
       <li id="practicality">
         Although <a href="#practicality">practicality</a> beats purity.
@@ -65,14 +65,13 @@
         to guess.
       </li>
       <li id="obvious">
-        There should be one&mdash;and preferably only one&mdash;<a
-          href="#obvious"
+        There should be one—and preferably only one—<a href="#obvious"
           >obvious</a
         >
         way to do it.
       </li>
       <li id="dutch">
-        Although that way may not be obvious at first unless you&rsquo;re
+        Although that way may not be obvious at first unless you’re
         <a href="#dutch">Dutch</a>.
       </li>
       <li id="now"><a href="#now">Now</a> is better than never.</li>
@@ -81,16 +80,16 @@
         <em>right</em> now.
       </li>
       <li id="hard">
-        If the implementation is <a href="#hard">hard</a> to explain, it&rsquo;s
-        a bad idea.
+        If the implementation is <a href="#hard">hard</a> to explain, it’s a bad
+        idea.
       </li>
       <li id="easy">
         If the implementation is <a href="#easy">easy</a> to explain, it may be
         a good idea.
       </li>
       <li id="namespaces">
-        <a href="#namespaces">Namespaces</a> are one honking great
-        idea&mdash;let&rsquo;s do more ofhose!
+        <a href="#namespaces">Namespaces</a> are one honking great idea—let’s do
+        more ofhose!
       </li>
     </ul>
 
@@ -104,7 +103,7 @@
       by Tim Peters.
       <br />
       This site was heavily inspired by
-      <a href="https://www.kennethreitz.org">Kenneth Reitz</a>&rsquo;s
+      <a href="https://www.kennethreitz.org">Kenneth Reitz</a>’s
       <a href="http://pep8.org">pep8.org</a>.
       <br />
       The colors were inspired by
@@ -112,7 +111,7 @@
       <a href="https://github.com/tonsky/FiraCode">Fira Code</a>.
       <br />
       <a href="https://github.com/nkantar/pep20.org">Contributions welcome!</a>
-      &hearts;
+      ♥
     </p>
   </body>
 </html>
