--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
       </li>
       <li id="namespaces">
         <a href="#namespaces">Namespaces</a> are one honking great idea—let’s do
-        more ofhose!
+        more of those!
       </li>
     </ul>
 
