--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         to guess.
       </li>
       <li id="obvious">
-        There should be one—and preferably only one—<a href="#obvious"
+        There should be one-- and preferably only one --<a href="#obvious"
           >obvious</a
         >
         way to do it.
@@ -89,8 +89,8 @@
         a good idea.
       </li>
       <li id="namespaces">
-        <a href="#namespaces">Namespaces</a> are one honking great idea—let’s do
-        more of those!
+        <a href="#namespaces">Namespaces</a> are one honking great idea -- let’s
+        do more of those!
       </li>
     </ul>
 
