Add Plausible snippet

--- a/index.html
+++ b/index.html
@@ -28,6 +28,10 @@
     <link rel="stylesheet" type="text/css" href="/assets/css/typeplate.css" />
     <link rel="stylesheet" type="text/css" href="/assets/css/fonts.css" />
     <link rel="stylesheet" type="text/css" href="/assets/css/style.css" />
+
+    <!-- Plausible -->
+    <script async defer data-domain="pep20.org" src="https://plausible.io/js/plausible.js"></script>
+
   </head>
   <body>
     <h1><a href="/">PEP 20</a></h1>
