Update Plausible snippet

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <link rel="stylesheet" type="text/css" href="/assets/css/style.css" />
 
     <!-- Plausible -->
-    <script async defer data-domain="pep20.org" src="https://plausible.io/js/plausible.js"></script>
+    <script async defer data-domain="pep20.org" src="https://stats.pep20.org/js/index.js"></script>
 
   </head>
   <body>
