Fix typographic inconsistency
If the em-dashes are `--`, then asterisks shouldn't be rendered as Markdown.

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
       <li id="now"><a href="#now">Now</a> is better than never.</li>
       <li id="never">
         Although <a href="#never">never</a> is often better than
-        <em>right</em> now.
+        *right* now.
       </li>
       <li id="hard">
         If the implementation is <a href="#hard">hard</a> to explain, it’s a bad
