Update Plausible URL

--- a/index.html
+++ b/index.html
@@ -30,8 +30,7 @@
     <link rel="stylesheet" type="text/css" href="/assets/css/style.css" />
 
     <!-- Plausible -->
-    <script async defer data-domain="pep20.org" src="https://stats.pep20.org/js/index.js"></script>
-
+    <script defer data-api="/api/event" data-domain="pep20.org" src="/js/script.js"></script>
   </head>
   <body>
     <h1><a href="/">PEP 20</a></h1>
